--- a/AzureTraining/AzureTraining/Views/Shared/_Layout.cshtml
+++ b/AzureTraining/AzureTraining/Views/Shared/_Layout.cshtml
@@ -30,7 +30,7 @@
 						<i class="fas fa-bars"></i> Menu
 					</button>
 					<div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-						@Html.ActionLink("Home", "Indes", "Home", new object { }, new { @class = "dropdown-item" })
+						@Html.ActionLink("Home", "Index", "Home", new object { }, new { @class = "dropdown-item" })
 						@Html.ActionLink("Storage", "Index", "Storage", new object { }, new { @class = "dropdown-item" })
 						@Html.ActionLink("About", "About", "Home", new object { }, new { @class = "dropdown-item" })
 						@Html.ActionLink("Contact", "Contact", "Home", new object { }, new { @class = "dropdown-item" })
