--- a/AzureTraining/AzureTraining/Views/Storage/Index.cshtml
+++ b/AzureTraining/AzureTraining/Views/Storage/Index.cshtml
@@ -1,24 +1,44 @@
 ﻿@model IList<AzureTraining.Models.BlobModel>
 
 @{
-    ViewBag.Title = "List of Blobs";
+	ViewBag.Title = "Library";
 }
 
-<h2>List of Blobs</h2>
+<h2>List of Files</h2>
 
-<form method="post" action="SaveFile" enctype="multipart/form-data">
+<form method="post" action="Library/SaveFile" enctype="multipart/form-data">
 	<div class="form-group">
 		<input type="file" name="file" />
 	</div>
 
-	<button type="submit" class="btn btn-success">Submit</button>
+	<button type="submit" class="btn btn-success">Upload File</button>
 </form>
 
 <br />
 
-@Model.Count File(s):
-<ul>
-	@foreach (var file in Model) {
-		<li>@file.Name</li>
-	}
-</ul>
+<div class="table-responsive">
+	<table class="table table-striped table-bordered table-hover table-condensed">
+		<thead>
+			<tr>
+				<th>Name</th>
+				<th>Size</th>
+				<th>Action</th>
+			</tr>
+		</thead>
+		<tbody>
+			@foreach (var file in Model) {
+				<tr>
+					<td>@file.Name</td>
+					<td>@file.Size</td>
+					<td>
+						<button class="btn btn-danger" type="button" id="deleteFile">
+							<i class="fas fa-trash-alt"></i> Delete
+						</button>
+					</td>
+				</tr>
+			}
+		</tbody>
+	</table>
+</div>
+
+@Model.Count File(s)
