Fix for Submit issue

--- a/AzureTraining/AzureTraining/Views/Storage/Blobs.cshtml
+++ b/AzureTraining/AzureTraining/Views/Storage/Blobs.cshtml
@@ -6,7 +6,7 @@
 
 <h2>List of Files</h2>
 
-<form method="post" action="Library/SaveFile" enctype="multipart/form-data">
+<form method="post" action="SaveFile" enctype="multipart/form-data">
 	<div class="form-group">
 		<input type="file" name="file" />
 	</div>
