--- a/AzureTraining/AzureTraining/Views/Shared/_Layout.cshtml
+++ b/AzureTraining/AzureTraining/Views/Shared/_Layout.cshtml
@@ -31,7 +31,7 @@
 					</button>
 					<div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
 						@Html.ActionLink("Home", "Index", "Home", new object { }, new { @class = "dropdown-item" })
-						@Html.ActionLink("Storage", "Index", "Storage", new object { }, new { @class = "dropdown-item" })
+						@Html.ActionLink("Storage", "Blobs", "Storage", new object { }, new { @class = "dropdown-item" })
 						@Html.ActionLink("About", "About", "Home", new object { }, new { @class = "dropdown-item" })
 						@Html.ActionLink("Contact", "Contact", "Home", new object { }, new { @class = "dropdown-item" })
 						<div class="dropdown-divider"></div>
