--- a/AzureTraining/AzureTraining/Views/Storage/Tables.cshtml
+++ b/AzureTraining/AzureTraining/Views/Storage/Tables.cshtml
@@ -1,4 +1,5 @@
-﻿
+﻿@model IList<AzureTraining.Models.TaskModel>
+
 @{
     ViewBag.Title = "Tables";
 }
@@ -12,3 +13,24 @@
 	</div>
 	<button type="submit" class="btn btn-success">Submit</button>
 </form>
+
+
+<h2>List of Tasks</h2>
+<div class="table-responsive">
+	<table class="table table-striped table-bordered table-hover table-condensed">
+		<thead>
+			<tr>
+				<th>Description</th>
+				<th>Created On</th>
+			</tr>
+		</thead>
+		<tbody>
+			@foreach (var task in Model) {
+				<tr>
+					<td>@task.Description</td>
+					<td>@task.CreatedDate</td>
+				</tr>
+			}
+		</tbody>
+	</table>
+</div>
