--- a/BibliotecaMusical/BibliotecaMusical/Views/Account/Login.cshtml
+++ b/BibliotecaMusical/BibliotecaMusical/Views/Account/Login.cshtml
@@ -27,14 +27,11 @@
                         @Html.ValidationMessageFor(m => m.Password, "", new { @class = "text-danger" })
                     </div>
                 </div>
-                @*<div class="form-group">
-                    <div class="col-md-offset-2 col-md-10">
-                        <div class="checkbox">
-                            @Html.CheckBoxFor(m => m.RememberMe)
-                            @Html.LabelFor(m => m.RememberMe)
-                        </div>
-                    </div>
-                </div>*@
+
+				if (!string.IsNullOrWhiteSpace(ViewBag.Message)) {
+					<span style="color:red;">@ViewBag.Message</span>
+				}
+
                 <div class="form-group">
                     <div class="col-md-offset-2 col-md-10">
                         <input type="submit" value="Log in" class="btn btn-default" />
