--- a/AzureTraining/AzureTraining/Views/Shared/_Layout.cshtml
+++ b/AzureTraining/AzureTraining/Views/Shared/_Layout.cshtml
@@ -33,6 +33,7 @@
 						@Html.ActionLink("Home", "Index", "Home", new object { }, new { @class = "dropdown-item" })
 						@Html.ActionLink("Blobs", "Blobs", "Storage", new object { }, new { @class = "dropdown-item" })
 						@Html.ActionLink("Tables", "Tables", "Storage", new object { }, new { @class = "dropdown-item" })
+						@Html.ActionLink("Queues", "Queues", "Storage", new object { }, new { @class = "dropdown-item" })
 						@Html.ActionLink("About", "About", "Home", new object { }, new { @class = "dropdown-item" })
 						@Html.ActionLink("Contact", "Contact", "Home", new object { }, new { @class = "dropdown-item" })
 						<div class="dropdown-divider"></div>
