Adding Log and Queue. Factoring AzureServices and User/Library services. Fixing File submit issue.

--- a/BibliotecaMusical/BibliotecaMusical/Views/Home/About.cshtml
+++ b/BibliotecaMusical/BibliotecaMusical/Views/Home/About.cshtml
@@ -17,9 +17,12 @@
 			<li>El usuario podrá cerrar la sesión.</li>
 		</ol>
 	</li>
-	<li>La aplicación necesitará guardar información de las acciones de los usuarios:</li>
-	<li>Cuando se agregue un nuevo archivo .mp3.</li>
-	<li>Cuando se elimine un archivo .mp3 existente.</li>
+	<li>La aplicación necesitará guardar información de las acciones de los usuarios:
+		<ol type="a">
+			<li>Cuando se agregue un nuevo archivo .mp3.</li>
+			<li>Cuando se elimine un archivo .mp3 existente.</li>
+		</ol>
+	</li>
 </ol>
 
 <h3>Especificaciones técnicas</h3>
