--- a/BibliotecaMusical/BibliotecaMusical/Views/Shared/_Layout.cshtml
+++ b/BibliotecaMusical/BibliotecaMusical/Views/Shared/_Layout.cshtml
@@ -32,7 +32,7 @@
 					<span class="btn btn-default disabled" style="font-size:x-large;">@ViewBag.Title</span>
 					<div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
 						@Html.ActionLink("Home", "Index", "Home", new object { }, new { @class = "dropdown-item" })
-						@Html.ActionLink("Library", "Index", "Library", new object { }, new { @class = "dropdown-item" })
+						@Html.ActionLink("Library", "Files", "Library", new object { }, new { @class = "dropdown-item" })
 						@Html.ActionLink("About", "About", "Home", new object { }, new { @class = "dropdown-item" })
 						@*@Html.ActionLink("Contact", "Contact", "Home", new object { }, new { @class = "dropdown-item" })*@
 						<div class="dropdown-divider"></div>
