--- a/AzureTraining/AzureTraining/Views/Storage/Blobs.cshtml
+++ b/AzureTraining/AzureTraining/Views/Storage/Blobs.cshtml
@@ -1,7 +1,7 @@
 ﻿@model IList<AzureTraining.Models.BlobModel>
 
 @{
-	ViewBag.Title = "Library";
+	ViewBag.Title = "Blobs";
 }
 
 <h2>List of Files</h2>
