--- a/BibliotecaMusical/BibliotecaMusical/Views/Shared/_Layout.cshtml
+++ b/BibliotecaMusical/BibliotecaMusical/Views/Shared/_Layout.cshtml
@@ -40,6 +40,7 @@
 					</div>
 				</div>
 			</div>
+			<span class="btn btn-default disabled" style="font-size:x-large; width:100%; text-align:right; font-size:smaller;">@User.Identity.Name</span>
 		</div>
 	</div>
 	<div class="container body-content">
